# Particle-System

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.json  particleSystem_json_exemple.txt
dependencies/JSON/: json_config.hpp
includes/: config.hpp
includes/classes/: AParticles.cpp  AParticles.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Particles.cpp  Particles.hpp  Shader.cpp  Shader.hpp
srcs/: events.cpp  flags.cpp  main.cpp  routine.cpp  utils.cpp  window.cpp
srcs/kernels/: blackhole.cl  particle.cl  rain.cl  random_utils.cl  test.cl
srcs/shaders/: fragment.frag  vertex.vert
srcs/shaders/blackhole/: fragment.frag
srcs/shaders/rain/: fragment.frag  vertex.vert
systems/: config.json
systems/blackhole/: blackhole.cl  fragment.glsl
systems/exemple/: compute.cl  exemple.cl  fragment.glsl
systems/plasma/: fragment.glsl  plasma.cl
systems/rain/: fragment.glsl  rain.cl
